# lanprobe

./: .gitignore  Cargo.toml  README.fr.md  README.md  install-server.sh  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
crates/lanprobe-core/: Cargo.toml
crates/lanprobe-core/src/: configure.rs  discovery.rs  interfaces.rs  internet.rs  iperf.rs  lib.rs  permissions.rs  ping.rs  ports.rs  proc.rs  public_ip.rs  sla.rs  speedtest.rs  updater.rs
crates/lanprobe-server/: Cargo.toml
crates/lanprobe-server/packaging/debian/: postinst  postrm  prerm
crates/lanprobe-server/packaging/systemd/: lanprobe-server.service
crates/lanprobe-server/src/: assets.rs  auth.rs  config.rs  influxdb.rs  lib.rs  main.rs  routes.rs  scheduler.rs  state.rs  tls.rs  web.rs
src/: app.css
src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/packaging/debian/: postinst
src-tauri/resources/linux/: README.md
src-tauri/resources/macos/: README.md
src-tauri/resources/win/: README.md
src-tauri/scripts/macos/pkg-scripts/: postinstall
src-tauri/src/: lib.rs  main.rs  updater.rs
src/lib/: tauri.ts
src/lib/components/: Dashboard.svelte  Discovery.svelte  HostRow.svelte  Icons.svelte  InternetIndicator.svelte  LoginScreen.svelte  Monitoring.svelte  PortScan.svelte  ProfileForm.svelte  Profiles.svelte  SectionAnchor.svelte  Settings.svelte  SetupBanner.svelte  SetupScreen.svelte  Sidebar.svelte  Sparkline.svelte  SpeedTest.svelte  StatRail.svelte  UpdateBanner.svelte
src/lib/i18n/: en.json  es.json  fr.json  index.ts
src/lib/stores/: configStore.ts  discovery.ts  influxdb.ts  internetStatus.ts  monitoring.ts  portscan.ts  portscanProfiles.ts  profiles.ts  scheduler.ts  selectedInterface.ts  serverMode.ts  settings.ts
src/routes/: +layout.svelte  +page.svelte
