[workspace]
resolver = "2"
members = ["src-tauri", "crates/lanprobe-core", "crates/lanprobe-server"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
dirs-next = "2"
rand = "0.10"
ping-async = "1"
dns-lookup = "2"
