[package]
name = "lanprobe"
version.workspace = true
edition.workspace = true
description = "LanProbe — Cross-platform network management tool"
authors = []

[lib]
name = "lanprobe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lanprobe-core = { path = "../crates/lanprobe-core" }
lanprobe-server = { path = "../crates/lanprobe-server" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-store = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
dirs-next = { workspace = true }
rand = { workspace = true }
ping-async = { workspace = true }
dns-lookup = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
