[package]
name = "lanprobe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LanProbe core — platform network logic shared by the desktop app and the headless server"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
dirs-next = { workspace = true }
rand = { workspace = true }
ping-async = { workspace = true }
dns-lookup = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
